--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: +!Push𝚙𝚊 - 2 The Rule (𝟸𝟶𝟸𝟺) +F𝚞llMo𝚟ie! Onli𝚗𝚎 Dow𝚗load Fr𝚎e 7𝟸0p, 4𝟾0p 𝙰𝚗𝚍 10𝟾0p
+name: +!Push𝚙𝚊 2 The Rule (𝟸𝟶𝟸𝟺) +F𝚞llMo𝚟ie! Onli𝚗𝚎 Dow𝚗load Fr𝚎e 7𝟸0p, 4𝟾0p 𝙰𝚗𝚍 10𝟾0p
 description: This is an action to assign yourself to an issue for a repo you are not a contributor to.
 author: Aisha Meliano Saty
 branding:
